<resources>
    <string name="app_name">Jet VPN</string>

    <string name="interstitial">ca-app-pub-2299497797502657/8216856975</string>

    <string name="nav_tab_1">Vpn</string>
    <string name="nav_tab_2">Premium</string>
    <string name="nav_tab_3">Profile</string>
    <string name="select_the_fastest_server">Select the fastest server</string>
    <string name="connect">Connect</string>
    <string name="vpn_servers">VPN Servers</string>
    <string name="tab_all_location">All Locations</string>
    <string name="tab_recommended">Recommended</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="get_premium_now">Get premium now</string>
    <string name="banner_premium_packages">Premium\nPackages</string>
    <string name="banner_description">Stable and 10 times high speed Watch HD videos without freezing Remove annoyed Ads banners Connect upto 5 different devices</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="account">Account</string>
    <string name="upgrade">Upgrade</string>
    <string name="logout">Log out</string>
    <string name="cancel_premium">Cancel Premium</string>
    <string name="view_package">View package</string>
    <string name="message_cancel_premium">Are you sure to cancel package? All premium features will be no longer existing</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_premium_success">You cancelled premium package. Hope you will be back soon</string>
    <string name="connecting">Connecting (%s)</string>
    <string name="connected">Connected</string>
    <string name="waiting">waiting…</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="message_invalid_email">Invalid email. Please try again or use the new one</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="message_agree">By signing up, I agree to the private policy</string>
    <string name="message_password_doesnt_match">Password doesn’t match</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="message_forgot_password">Please enter your email address in the form below. We will send a reset password email to you inbox</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_email">Reset password email</string>
    <string name="message_reset_password_email">We sent a reset password email to your inbox. Please check and click the link inside to set up your new password</string>
    <string name="ok">OK</string>
    <string name="title_private_policy">Private Policy</string>
    <string name="private_policy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pellentesque et nulla et pulvinar. Ut sodales convallis nisl sed interdum. Phasellus fermentum convallis purus, vel tincidunt lectus suscipit eu. Nulla ac pretium augue. Sed sollicitudin fermentum leo sed pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis quam sit amet arcu suscipit aliquet. Nam sollicitudin sagittis lectus, sed euismod turpis efficitur volutpat. Sed pulvinar dui sed mi elementum imperdiet. Nulla ipsum nunc, mollis in libero sit amet, commodo eleifend tortor. Vivamus lobortis vel libero vitae sodales. Nullam convallis lorem leo, id tincidunt sapien interdum sed. Nullam non enim vestibulum, suscipit nibh eu, elementum arcu. Donec rhoncus, libero ut gravida tincidunt, erat tellus tincidunt turpis, facilisis placerat justo nibh tincidunt dui. Donec erat quam, finibus a faucibus eu, cursus a risus. Sed auctor molestie odio ac molestie. Phasellus tempor lorem eu mi ullamcorper, sit amet scelerisque nibh tincidunt. Vestibulum magna neque, convallis ut nisi ac, scelerisque feugiat orci. Sed id dolor diam. Aenean ut venenatis leo.</string>
    <string name="new_password">New Password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="message_password_was_changed">Your password was changed successfully</string>
    <string name="something_wrong">Something wrong.</string>
    <string name="please_try_again">Please try again</string>
    <string name="refresh">Refresh</string>
    <string name="disconnect">Disconnect</string>
    <string name="current">\u0020(Current)</string>
    <string name="downgrade">downgrade</string>
    <string name="message_get_premium_success">Awesome. You are registered monthly package successfully</string>
    <string name="message_upgrade_premium_success">Great choice. You are registered yearly package successfully</string>
    <string name="gold_yearly">Yearly</string>
    <string name="gold_monthly">Monthly</string>
    <string name="free">Free</string>
    <string name="gold_monthly_package">"Monthly package until %s"</string>
    <string name="gold_yearly_package">"Yearly package until %s"</string>
    <string name="change_vpn_dialog_title">Cancel Confirmation</string>
    <string name="change_vpn_dialog_message">Disconnect the connected VPN?</string>
</resources>