<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_common">

    <com.eskimobile.jetvpn.common.widget.AuthToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:atb_left="@drawable/ic_arrowleft"
        app:atb_title="@string/title_forgot_password" />

    <TextView
        style="@style/TextView.Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_common"
        android:alpha="0.5"
        android:text="@string/message_forgot_password" />

    <com.eskimobile.jetvpn.common.widget.InputView
        android:id="@+id/inputAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input_view"
        android:inputType="textEmailAddress"
        app:iv_action="CANCEL"
        app:iv_hint="@string/hint_email_address"
        app:iv_label="@string/email_address" />

    <com.eskimobile.jetvpn.common.widget.SnackBarView
        android:id="@+id/snackBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorError"
        android:visibility="invisible"
        app:sbv_icon="@drawable/ic_warning"
        app:sbv_message="@string/message_invalid_email"
        tools:visibility="visible" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvBottomAction"
        style="@style/ActionButton.State"
        android:layout_width="match_parent"
        android:text="@string/reset_password" />
</LinearLayout>
