<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding_common">

    <com.eskimobile.jetvpn.common.widget.AuthToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:atb_left="@drawable/ic_arrowleft"
        app:atb_title="@string/new_password" />

    <com.eskimobile.jetvpn.common.widget.InputView
        android:id="@+id/inputNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input_view"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="22dp"
        android:inputType="textPassword"
        app:iv_action="HINT"
        app:iv_hint="@string/hint_new_password"
        app:iv_label="@string/new_password" />

    <com.eskimobile.jetvpn.common.widget.InputView
        android:id="@+id/inputConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input_view"
        android:layout_below="@+id/inputNewPassword"
        android:layout_marginTop="@dimen/padding_common"
        android:inputType="textPassword"
        app:iv_action="HINT"
        app:iv_hint="@string/hint_confirm_new_password"
        app:iv_label="@string/confirm_new_password" />

    <com.eskimobile.jetvpn.common.widget.SnackBarView
        android:id="@+id/snackBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputConfirmNewPassword"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorError"
        android:visibility="invisible"
        app:sbv_icon="@drawable/ic_warning"
        app:sbv_message="@string/message_invalid_email"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvBottomAction"
        style="@style/ActionButton.State"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm" />
</RelativeLayout>
